--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "start": "node server.js" 
+    "start": "node server.js"
   },
   "dependencies": {
+    "@bachdgvn/vue-otp-input": "^1.0.8",
     "core-js": "^3.6.4",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
